--- a/style.css
+++ b/style.css
@@ -1,7 +1,31 @@
 body {
-    background-color: #000; /* Black background */
+    background-color: #080808; /* Hazy black background */
     color: #ccc; /* Light gray text */
     font-family: sans-serif;
     margin: 0;
     padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:link {
+  color: #ccc;
+}
+
+a:visited {
+  color: #ccc;
+}
+
+a:hover {
+  color: #ccc;
+}
+
+a:active {
+  color: #ccc;
 }
