--- a/style.css
+++ b/style.css
@@ -1,13 +1,44 @@
 body {
     background-color: #080808; /* Hazy black background */
-    color: #ccc; /* Light gray text */
+    color: #808080; /* Gray text */
     font-family: sans-serif;
     margin: 0;
     padding: 0;
+    font-size: 12px;
 }
 
 a {
   text-decoration: none;
+}
+
+h1 {
+    font-size: 2.5em;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1.5em;
+}
+
+h4 {
+    font-size: 1.2em;
+}
+
+h5 {
+    font-size: 1em;
+    font-weight: bold;
+}
+
+h6 {
+    font-size: 0.9em;
+    font-style: italic;
+}
+
+p {
+    line-height: 1.6;
 }
 
 a:hover {
@@ -15,17 +46,17 @@ a:hover {
 }
 
 a:link {
-  color: #ccc;
+  color: #808080;
 }
 
 a:visited {
-  color: #ccc;
+  color: #808080;
 }
 
 a:hover {
-  color: #ccc;
+  color: #808080;
 }
 
 a:active {
-  color: #ccc;
+  color: #808080;
 }
